====Welcome to MORAL DESPAIR.====
Two hundred years have passed....