@@ -7,9 +7,10 @@ void reset(int arg) {
     set_light(1);
 
     short_desc = "MD Banking";
-    long_desc = "PHSAE0: player owned bank guild";
+    long_desc = "PHASE0: a player-owned guild (bank)";
     dest_dir = ({
         "domain/original/area/vesla/room217", "east",
     });
 }
+
 
