@@ -1,2 +1,4 @@
 ====Welcome to MORAL DESPAIR.====
+=======[Phase 1: Despair.]=======
+
 Two hundred years have passed....
